Add environments to project records
