# imbi/endpoints/project/inventory.py
@@ -7,7 +7,7 @@ from imbi.endpoints import base
 SQL = """\
   SELECT id, created_at, modified_at, "name", slug, description,
          owned_by, data_center, project_type, configuration_system,
-         deployment_type, orchestration_system
+         deployment_type, orchestration_system, environments
     FROM v1.projects
 ORDER BY owned_by, "name" ASC;"""
 
